--- a/quiz_score.html
+++ b/quiz_score.html
@@ -9,7 +9,7 @@
 </head>
 
 <div align="center">
-<iframe src=" " allow="autoplay; camera; microphone"
+<iframe src="https://script.google.com/macros/s/AKfycbxDK0kHqkGQpq-XRe0TL5J629WUqwQoPJAx67L2Rjlnd6T1pRfub-Hd9p5tHiiNC90i/exec?mod=view_score_page" allow="autoplay; camera; microphone"
 style="
     position: fixed;
     top: 0px;
